[package]
name = "fba"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary
lto = true  # Enable link time optimization
codegen-units = 1  # Reduce parallel code generation units

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
framebuffer = "0.3.1"
gif = "0.12.0"
