[package]
name = "fba"
version = "0.2.0"
authors = ["Paweł Knioła <pawel.kn@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Plays GIF animations on a raw framebuffer device"
repository = "https://github.com/pawelkn/framebuffer-animations"
readme = "README.md"

[profile.release]
strip = true  # Automatically strip symbols from the binary
lto = true  # Enable link time optimization
codegen-units = 1  # Reduce parallel code generation units

[dependencies]
pico-args = "^0.5"
framebuffer = "^0.3"
gif = "^0.12"
